--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <meta name="google-site-verification" content="ZAsDfLp7W9ThlIOAUGljrsihZXG4VtJrjkdRWgJgoF4" />
     <link rel="canonical" href="https://hotas.deltafarce.win/">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
+
     <!-- Additional SEO Tags -->
     <meta name="language" content="English">
     <meta name="revisit-after" content="7 days">
