--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Free HOTAS Configurator for Arma Reforger | Configure Any Joystick</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Free HOTAS configurator for Arma Reforger. Configure Thrustmaster, Logitech, VKB, Virpil joysticks. Setup helicopter cyclic, collective, rudder pedals. Fix Sidewinder X2 axis issues. Browser-based, no install required.">
+    <meta name="description" content="Free web tool to configure any HOTAS, joystick, or flight controller for Arma Reforger helicopters. Supports all major brands. No install required.">
     <meta name="keywords" content="Arma Reforger HOTAS setup, Arma Reforger joystick config, helicopter controls Arma Reforger, Thrustmaster HOTAS Reforger, Logitech X56 Arma, VKB joystick Arma, flight sim controls, HOTAS binding, rudder pedals setup, collective throttle, Sidewinder X2 fix, custom input config, flight stick configuration, Virpil HOTAS, Saitek X52, gaming flight controls, military flight simulator">
     <meta name="author" content="Delta Farce Gaming Community">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -226,7 +226,9 @@
     </script>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <h1>Arma Reforger HOTAS Configurator - Free Joystick Configuration Tool</h1>
+    </div>
     <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
