Add noscript and move cookie banner to bottom of page

--- a/index.html
+++ b/index.html
@@ -226,6 +226,47 @@
     </script>
 </head>
 <body>
+    <!-- Noscript fallback for search engines and non-JS browsers -->
+    <noscript>
+        <div style="max-width: 1200px; margin: 0 auto; padding: 20px; color: #dfe6e9; font-family: 'Courier New', monospace;">
+            <header style="text-align: center; background: rgba(67, 76, 94, 0.95); padding: 30px; border: 3px solid #4a5d23; margin-bottom: 30px;">
+                <h1 style="color: #d4af37; font-size: 2em; margin-bottom: 10px;">Delta Farce - Arma Reforger HOTAS Configurator</h1>
+                <p style="font-size: 1.1em; color: #bdc3c7;">Configure your joystick inputs for Arma Reforger</p>
+            </header>
+
+            <section style="background: rgba(67, 76, 94, 0.95); padding: 30px; border: 2px solid #4a5d23; margin-bottom: 20px;">
+                <h2 style="color: #d4af37; font-size: 1.5em; margin-bottom: 15px;">About This Tool</h2>
+                <p style="line-height: 1.7; margin-bottom: 15px;">This is a free web-based tool to configure any HOTAS, joystick, or flight controller for Arma Reforger helicopters. The configurator works with all major brands including Thrustmaster, Logitech, VKB, Virpil, and more.</p>
+                <p style="line-height: 1.7; margin-bottom: 15px;"><strong style="color: #d4af37;">JavaScript Required:</strong> This tool requires JavaScript to detect your joystick inputs and generate configuration files. Please enable JavaScript in your browser to use the configurator.</p>
+            </section>
+
+            <section style="background: rgba(67, 76, 94, 0.95); padding: 30px; border: 2px solid #4a5d23; margin-bottom: 20px;">
+                <h2 style="color: #d4af37; font-size: 1.5em; margin-bottom: 15px;">Supported Hardware</h2>
+                <ul style="line-height: 1.7; padding-left: 25px;">
+                    <li>Thrustmaster: T.16000M, HOTAS Warthog, T.Flight HOTAS X, T.Flight HOTAS One</li>
+                    <li>Logitech: Extreme 3D Pro, G X56 HOTAS, G Saitek X52, X52 Pro</li>
+                    <li>VKB: Gladiator NXT, Gunfighter series, T-Rudders pedals</li>
+                    <li>Virpil: VPC Constellation ALPHA, WarBRD, MongoosT-50</li>
+                    <li>CH Products: Fighterstick, Pro Throttle, Pro Pedals</li>
+                    <li>Microsoft: Sidewinder series</li>
+                    <li>All generic USB joysticks and game controllers</li>
+                </ul>
+            </section>
+
+            <section style="background: rgba(67, 76, 94, 0.95); padding: 30px; border: 2px solid #4a5d23;">
+                <h2 style="color: #d4af37; font-size: 1.5em; margin-bottom: 15px;">How It Works</h2>
+                <ol style="line-height: 1.7; padding-left: 25px;">
+                    <li>Connect your HOTAS or joystick to your computer</li>
+                    <li>Click "Start Configuring" to begin the binding process</li>
+                    <li>Press buttons or move axes when prompted to assign controls</li>
+                    <li>Download your generated configuration file</li>
+                    <li>Copy the file to your Arma Reforger customInputConfigs folder</li>
+                    <li>Select it in-game from Options > Controls</li>
+                </ol>
+            </section>
+        </div>
+    </noscript>
+
     <div id="app">
         <h1>Arma Reforger HOTAS Configurator - Free Joystick Configuration Tool</h1>
     </div>
