Add google analytics

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <meta name="google-site-verification" content="ZAsDfLp7W9ThlIOAUGljrsihZXG4VtJrjkdRWgJgoF4" />
     <link rel="canonical" href="https://hotas.deltafarce.win/">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-H8S8RY73V8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-H8S8RY73V8');
+    </script>
+
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
