Clean up text, it's already clear that it's a free tool

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free HOTAS Configurator for Arma Reforger | Configure Any Joystick</title>
+    <title>HOTAS Configurator for Arma Reforger | Configure Any Joystick</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Free web tool to configure any HOTAS, joystick, or flight controller for Arma Reforger helicopters. Supports all major brands. No install required.">
+    <meta name="description" content="Web tool to configure any HOTAS, joystick, or flight controller for Arma Reforger helicopters. Supports all major brands. No install required.">
     <meta name="keywords" content="Arma Reforger HOTAS setup, Arma Reforger joystick config, helicopter controls Arma Reforger, Thrustmaster HOTAS Reforger, Logitech X56 Arma, VKB joystick Arma, flight sim controls, HOTAS binding, rudder pedals setup, collective throttle, Sidewinder X2 fix, custom input config, flight stick configuration, Virpil HOTAS, Saitek X52, gaming flight controls, military flight simulator">
     <meta name="author" content="Delta Farce Gaming Community">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -39,7 +39,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://hotas.deltafarce.win/">
-    <meta property="og:title" content="Free HOTAS Configurator for Arma Reforger">
+    <meta property="og:title" content="HOTAS Configurator for Arma Reforger">
     <meta property="og:description" content="Configure any joystick, HOTAS, or flight controller for Arma Reforger. Generate custom input configs in seconds with our easy-to-use web tool.">
     <meta property="og:image" content="https://hotas.deltafarce.win/og-image.png">
     <meta property="og:site_name" content="Delta Farce HOTAS Configurator">
@@ -47,7 +47,7 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://hotas.deltafarce.win/">
-    <meta name="twitter:title" content="Free HOTAS Configurator for Arma Reforger">
+    <meta name="twitter:title" content="HOTAS Configurator for Arma Reforger">
     <meta name="twitter:description" content="Configure any joystick, HOTAS, or flight controller for Arma Reforger. Generate custom input configs in seconds.">
     <meta name="twitter:image" content="https://hotas.deltafarce.win/og-image.png">
 
@@ -58,7 +58,7 @@
       "@type": "WebApplication",
       "name": "Arma Reforger HOTAS Configurator",
       "alternateName": "Delta Farce HOTAS Config Tool",
-      "description": "Free web-based tool to configure any joystick, HOTAS, or flight controller for Arma Reforger helicopter and aircraft controls. Supports Thrustmaster, Logitech, VKB, Virpil, and all major flight sim hardware.",
+      "description": "Web-based tool to configure any joystick, HOTAS, or flight controller for Arma Reforger helicopter and aircraft controls. Supports Thrustmaster, Logitech, VKB, Virpil, and all major flight sim hardware.",
       "url": "https://hotas.deltafarce.win/",
       "applicationCategory": "GameApplication",
       "operatingSystem": "Any (Web Browser)",
@@ -161,7 +161,7 @@
       "@context": "https://schema.org",
       "@type": "HowTo",
       "name": "How to Configure HOTAS Controls for Arma Reforger",
-      "description": "Step-by-step guide to configuring your joystick, throttle, and pedals for Arma Reforger using the free online HOTAS configurator.",
+      "description": "Step-by-step guide to configuring your joystick, throttle, and pedals for Arma Reforger using the online HOTAS configurator.",
       "image": "https://hotas.deltafarce.win/og-image.png",
       "totalTime": "PT10M",
       "estimatedCost": {
@@ -247,7 +247,7 @@
 
             <section style="background: rgba(67, 76, 94, 0.95); padding: 30px; border: 2px solid #4a5d23; margin-bottom: 20px;">
                 <h2 style="color: #d4af37; font-size: 1.5em; margin-bottom: 15px;">About This Tool</h2>
-                <p style="line-height: 1.7; margin-bottom: 15px;">This is a free web-based tool to configure any HOTAS, joystick, or flight controller for Arma Reforger helicopters. The configurator works with all major brands including Thrustmaster, Logitech, VKB, Virpil, and more.</p>
+                <p style="line-height: 1.7; margin-bottom: 15px;">This is a web-based tool to configure any HOTAS, joystick, or flight controller for Arma Reforger helicopters. The configurator works with all major brands including Thrustmaster, Logitech, VKB, Virpil, and more.</p>
                 <p style="line-height: 1.7; margin-bottom: 15px;"><strong style="color: #d4af37;">JavaScript Required:</strong> This tool requires JavaScript to detect your joystick inputs and generate configuration files. Please enable JavaScript in your browser to use the configurator.</p>
             </section>
 
@@ -279,7 +279,7 @@
     </noscript>
 
     <div id="app">
-        <h1>Arma Reforger HOTAS Configurator - Free Joystick Configuration Tool</h1>
+        <h1>Arma Reforger HOTAS Configurator - Joystick Configuration Tool</h1>
     </div>
     <script type="module" src="/src/main.ts"></script>
 </body>
